--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+<header class = "header"></header>
+<a href="#" class="logo"> 
+  <img src="https://avatars.mds.yandex.net/i?id=9c86d54e88604ef673b53a8613e928cd_l-4600465-images-thumbs&n=13" alt="Site logo" class="logo-img">
+</a>
+<h1 class="site-title">Визитка</h1>
+<nav class="main-nav">
+  <ul class="nav-list">
+    <li class="nav-item">
+      <a href="#life" class="nav-link">
+        "Личная информация"
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="#education" class="nav-link">
+         "Образование"
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="#hobbi" class="nav-link">
+         "Хобби"
+      </a>
+    </li>
+  </ul>
+ </nav>
+</header>
+<main></main>
 </body>
 </html>
